bug(readability): Increased readability
Some people have trouble reading the lighter font.

--- a/src/docs/site/css/main.css
+++ b/src/docs/site/css/main.css
@@ -46,7 +46,7 @@ html {
 }
 body {
   font: normal 1em;
-  font-weight: 100;
+  font-weight: 500;
   font-family: 'Source Sans Pro', 'Helvetica', 'Arial', sans-serif;
   color: #fff;
   background: #58d758;
